🩹 Fix description overflow

--- a/client/src/page-components/ItemDetail/ItemDetail.module.scss
+++ b/client/src/page-components/ItemDetail/ItemDetail.module.scss
@@ -39,6 +39,7 @@
       &__text {
          @include fontSize-3;
          color: $color-gray-200;
+         word-break: break-word;
       }
    }
 }
